[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Originals/NodeCircle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GameLayer/IntrusionNode/IntrusionNode.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GameLayer/IntrusionNode/SpriteFrames/CircleOpenClosed3.tres" type="SpriteFrames" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 78.9941

[node name="IntrusionNode" type="Node2D" groups=[
"NODE",
]]
script = ExtResource( 3 )

[node name="Center" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedRing" type="AnimatedSprite" parent="."]
frames = ExtResource( 4 )
animation = "none"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
